name:                hx-brutepush
version:             0.1.0.0
homepage:            https://github.com/metaleap/haxtools
license:             GPL
license-file:        LICENSE
author:              metaleap
maintainer:          metaleap@mailbox.org
copyright:           Phil Schumann
category:            Misc
build-type:          Simple
cabal-version:       >=1.10

executable hx-git-brutepush
  hs-source-dirs:      src
  ghc-options:         -j4 -Wall -fno-warn-missing-signatures -O2 -threaded -rtsopts -with-rtsopts=-N4
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, haxbase, directory, filepath, process
